<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".PostServicesActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/lavender"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:layout_constraintTop_toTopOf="parent"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:title="FixItFast"
            app:titleMarginStart="30dp"
            app:titleTextColor="@color/white"
            tools:layout_editor_absoluteX="0dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="15dp"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="15dp"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">

            <TextView
                android:id="@+id/textview_post_services"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/offer_your_service"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

            <TextView
                android:id="@+id/textView_service_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:padding="6dp"
                android:text="@string/service_type"
                android:textColor="#555555"
                android:textSize="18sp"
                android:focusable="true"
                android:focusableInTouchMode="true"/>

            <Spinner
                android:id="@+id/spinner_service_type"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="10dp" />

            <TextView
                android:id="@+id/textView_services_state"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:padding="6dp"
                android:text="@string/state"
                android:textColor="#555555"
                android:textSize="18sp"
                android:focusable="true"
                android:focusableInTouchMode="true"/>

            <Spinner
                android:id="@+id/spinner_service_state"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="9dp" />

            <TextView
                android:id="@+id/textView_services_district"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:padding="6dp"
                android:text="@string/district"
                android:textColor="#555555"
                android:textSize="18sp"
                android:focusable="true"
                android:focusableInTouchMode="true"/>

            <Spinner
                android:id="@+id/spinner_service_district"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="9dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:padding="6dp"
                android:textColor="#555555"
                android:textSize="18sp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editText_title_services"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_title_of_service" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:padding="6dp"
                android:textColor="#555555"
                android:textSize="18sp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editText_description_services"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_description_of_service"
                    android:inputType="textMultiLine"
                    android:lines="10"
                    android:gravity="top"
                    android:overScrollMode="always"
                    android:scrollbarStyle="insideInset"
                    android:scrollbars="vertical"
                    android:scrollHorizontally="false"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:padding="6dp"
                android:textColor="#555555"
                android:textSize="18sp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editText_phone_services"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Enter your mobile number"
                    android:inputType="phone"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:padding="6dp"
                android:textColor="#555555"
                android:textSize="18sp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editText_price_services"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_price_of_service"
                    android:inputType="numberDecimal"/>

            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/button_post_service"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="70dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="70dp"
                android:layout_marginBottom="50dp"
                android:text="@string/post_service"
                android:textSize="18sp" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:elevation="10dp"/>

        </LinearLayout>
    </LinearLayout>
</ScrollView>
