<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ForgotPasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/lavender"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:titleMarginStart="30dp"
            app:titleTextColor="@color/white" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@color/white"
            android:padding="15dp">

            <TextView
                android:id="@+id/password_reset_head"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/please_enter_your_registered_email_to_receive_password_reset_link"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Title" />

            <TextView
                android:id="@+id/password_reset_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/password_reset_head"
                android:layout_marginTop="50dp"
                android:padding="6dp"
                android:text="@string/email"
                android:textColor="#555555"
                android:textSize="16sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/box_reset_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/password_reset_email">

                <EditText
                    android:id="@+id/editText_reset_email"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginTop="10dp"
                    android:hint="@string/enter_your_registered_email"
                    android:inputType="textEmailAddress"
                    android:padding="6dp"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/button_password_reset"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/box_reset_email"
                android:layout_marginLeft="70dp"
                android:layout_marginTop="50dp"
                android:layout_marginRight="70dp"
                android:text="@string/reset_password" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:elevation="10dp"
                android:visibility="gone" />

        </RelativeLayout>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>